--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,26 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*/node_modules/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+build/
+dist/
+
+# Environment variables
+.env*
 
 # Installer logs
 pip-log.txt
